# Bloomia

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
ai-service/: README.md  env.sample  package.json
ai-service/src/: config.ts  server.ts  types.ts
docs/: 00_PRODUCT_PLAN.md  01_EXECUTION_PLAN.md  02_AI_DIALOG_AND_WEB_CONFIG.md  03_BACKLOG.md  04_AI_TAB_DATA_STORES.md  05_TASK_BOARD.md  06_PHASE_A_IMPLEMENTATION.md  07_PHASE_B_IMPLEMENTATION.md  08_PHASE_C_IMPLEMENTATION.md  09_PHASE_D_IMPLEMENTATION.md  10_PHASE_E_IMPLEMENTATION.md  11_PHASE_F_IMPLEMENTATION.md  12_PHASE_G_IMPLEMENTATION.md  13_PHASE_H_IMPLEMENTATION.md  14_PRODUCT_GAP_AUDIT.md  15_RELEASE_MEDIA_BACKEND_PREVIEW.md  16_INSTALLER.md  17_UPDATE_WORKFLOW.md  18_AI_ADAPTER_BACKUP_RESTORE.md
scripts/: configure-update.mjs  configure-updater.mjs  generate-release-art.mjs  make-update-feed.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: AppAssistant.tsx  AppLayout.tsx  DesktopTitlebar.tsx  Sidebar.tsx  Topbar.tsx  routes.ts
src/db/: checkoutMigrations.ts  client.ts  index.ts  migrate.ts  migrations.ts  photoMigrations.ts  recipeMigrations.ts  schema.ts  seed.ts
src/services/: appBootstrap.ts  licenseService.ts
src/styles/: brandLogo.css  components.css  dataWorkspace.css  deviceCompact.css  devicePanel.css  floralDecor.css  flowerOrderPreview.css  global.css  inventory.css  layout.css  licenseActivation.css  licenseCenter.css  licenseRuntime.css  pos.css  (+15 more)
(+72 files in other folders)
